==> superchao6/STM32H7_cam/Drivers/User/Src/lcd_spi_096.c <==
#include "lcd_spi_096.h"
#define  LCD_SPI hspi4           // SPI局部宏，方便修改和移植

void  LCD_WriteCommand(uint8_t lcd_command)
{
   LCD_DC_Command;     // 数据指令选择 引脚输出低电平，代表本次传输 指令

   HAL_SPI_Transmit(&LCD_SPI, &lcd_command, 1, 1000); // 启动SPI传输
}

void  LCD_WriteData_8bit(uint8_t lcd_data)
{
   LCD_DC_Data;     // 数据指令选择 引脚输出高电平，代表本次传输 数据

   HAL_SPI_Transmit(&LCD_SPI, &lcd_data, 1, 1000) ; // 启动SPI传输
}

void  LCD_WriteData_16bit(uint16_t lcd_data)
{
   uint8_t lcd_data_buff[2];    // 数据发送区
   LCD_DC_Data;      // 数据指令选择 引脚输出高电平，代表本次传输 数据
 
   lcd_data_buff[0] = lcd_data>>8;  // 将数据拆分
   lcd_data_buff[1] = lcd_data;
		
	HAL_SPI_Transmit(&LCD_SPI, lcd_data_buff, 2, 1000) ;   // 启动SPI传输
}

void  LCD_WriteBuff(uint16_t *DataBuff, uint16_t DataSize)
{
	LCD_DC_Data;     // 数据指令选择 引脚输出高电平，代表本次传输 数据	

// 修改为16位数据宽度，写入数据更加效率，不需要拆分	
   LCD_SPI.Init.DataSize 	= SPI_DATASIZE_16BIT;   //	16位数据宽度
   HAL_SPI_Init(&LCD_SPI);		
	
	HAL_SPI_Transmit(&LCD_SPI, (uint8_t *)DataBuff, DataSize, 1000) ; // 启动SPI传输
	
// 改回8位数据宽度，因为指令和部分数据都是按照8位传输的
	LCD_SPI.Init.DataSize 	= SPI_DATASIZE_8BIT;    //	8位数据宽度
   HAL_SPI_Init(&LCD_SPI);	
}

void SPI_LCD_Init(void)
{
   MX_SPI4_Init();               // 初始化SPI和控制引脚
	
   osDelay(10);               	// 屏幕刚完成复位时（包括上电复位），需要等待至少5ms才能发送指令

	if( lcd_panle == panle_096 )
   {
		LCD_WriteCommand(0x36);       // 显存访问控制 指令，用于设置访问显存的方式
		LCD_WriteData_8bit(0x08);     

		LCD_WriteCommand(0x3A);			// 接口像素格式 指令，用于设置使用 12位、16位还是18位色
		LCD_WriteData_8bit(0x05);     // 此处配置成 16位 像素格式

	// 以下为各个电压参数的配置，直接使用液晶厂家给出的参数	
		LCD_WriteCommand(0xB1);     //Normal mode
		LCD_WriteData_8bit(0x05);   
		LCD_WriteData_8bit(0x3C);   
		LCD_WriteData_8bit(0x3C);   
		LCD_WriteCommand(0xB2);     //Idle mode
		LCD_WriteData_8bit(0x05);   
		LCD_WriteData_8bit(0x3C);   
		LCD_WriteData_8bit(0x3C);   
		LCD_WriteCommand(0xB3);     //Partial mode
		LCD_WriteData_8bit(0x05);   
		LCD_WriteData_8bit(0x3C);   
		LCD_WriteData_8bit(0x3C);   
		LCD_WriteData_8bit(0x05);   
		LCD_WriteData_8bit(0x3C);   
		LCD_WriteData_8bit(0x3C);   
		LCD_WriteCommand(0xB4);     //Dot inversion
		LCD_WriteData_8bit(0x03);   
		LCD_WriteCommand(0xC0);     //AVDD GVDD
		LCD_WriteData_8bit(0xAB);   
		LCD_WriteData_8bit(0x0B);   
		LCD_WriteData_8bit(0x04);   
		LCD_WriteCommand(0xC1);     //VGH VGL
		LCD_WriteData_8bit(0xC5);   //C0
		LCD_WriteCommand(0xC2);     //Normal Mode
		LCD_WriteData_8bit(0x0D);   
		LCD_WriteData_8bit(0x00);   
		LCD_WriteCommand(0xC3);     //Idle
		LCD_WriteData_8bit(0x8D);   
		LCD_WriteData_8bit(0x6A);   
		LCD_WriteCommand(0xC4);     //Partial+Full
		LCD_WriteData_8bit(0x8D);   
		LCD_WriteData_8bit(0xEE);   
		LCD_WriteCommand(0xC5);     //VCOM
		LCD_WriteData_8bit(0x0F);   

		LCD_WriteCommand(0xE0);       // 正极电压伽马值设定
		LCD_WriteData_8bit(0x07);   
		LCD_WriteData_8bit(0x0E);   
		LCD_WriteData_8bit(0x08);   
		LCD_WriteData_8bit(0x07);   
		LCD_WriteData_8bit(0x10);   
		LCD_WriteData_8bit(0x07);   
		LCD_WriteData_8bit(0x02);   
		LCD_WriteData_8bit(0x07);   
		LCD_WriteData_8bit(0x09);   
		LCD_WriteData_8bit(0x0F);   
		LCD_WriteData_8bit(0x25);   
		LCD_WriteData_8bit(0x36);   
		LCD_WriteData_8bit(0x00);   
		LCD_WriteData_8bit(0x08);   
		LCD_WriteData_8bit(0x04);   
		LCD_WriteData_8bit(0x10);   

		LCD_WriteCommand(0xE1);      // 负极电压伽马值设定
		LCD_WriteData_8bit(0x0A);   
		LCD_WriteData_8bit(0x0D);   
		LCD_WriteData_8bit(0x08);   
		LCD_WriteData_8bit(0x07);   
		LCD_WriteData_8bit(0x0F);   
		LCD_WriteData_8bit(0x07);   
		LCD_WriteData_8bit(0x02);   
		LCD_WriteData_8bit(0x07);   
		LCD_WriteData_8bit(0x09);   
		LCD_WriteData_8bit(0x0F);   
		LCD_WriteData_8bit(0x25);   
		LCD_WriteData_8bit(0x35);   
		LCD_WriteData_8bit(0x00);   
		LCD_WriteData_8bit(0x09);   
		LCD_WriteData_8bit(0x04);   
		LCD_WriteData_8bit(0x10);

		LCD_WriteCommand(0xFC);    
		LCD_WriteData_8bit(0x80);  
	
   }
   else
   {	
		LCD_WriteCommand(0x36);       // 显存访问控制 指令，用于设置访问显存的方式
		LCD_WriteData_8bit(0x00);     // 配置成 从上到下、从左到右，RGB像素格式

		LCD_WriteCommand(0x3A);			// 接口像素格式 指令，用于设置使用 12位、16位还是18位色
		LCD_WriteData_8bit(0x05);     // 此处配置成 16位 像素格式

	// 接下来很多都是电压设置指令，直接使用厂家给设定值
		LCD_WriteCommand(0xB2);			
		LCD_WriteData_8bit(0x0C);
		LCD_WriteData_8bit(0x0C); 
		LCD_WriteData_8bit(0x00); 
		LCD_WriteData_8bit(0x33); 
		LCD_WriteData_8bit(0x33); 			

		LCD_WriteCommand(0xB7);		   // 栅极电压设置指令	
		LCD_WriteData_8bit(0x35);     // VGH = 13.26V，VGL = -10.43V

		LCD_WriteCommand(0xBB);			// 公共电压设置指令
		LCD_WriteData_8bit(0x19);     // VCOM = 1.35V

		LCD_WriteCommand(0xC0);
		LCD_WriteData_8bit(0x2C);

		LCD_WriteCommand(0xC2);       // VDV 和 VRH 来源设置
		LCD_WriteData_8bit(0x01);     // VDV 和 VRH 由用户自由配置

		LCD_WriteCommand(0xC3);			// VRH电压 设置指令  
		LCD_WriteData_8bit(0x12);     // VRH电压 = 4.6+( vcom+vcom offset+vdv)
					
		LCD_WriteCommand(0xC4);		   // VDV电压 设置指令	
		LCD_WriteData_8bit(0x20);     // VDV电压 = 0v

		LCD_WriteCommand(0xC6); 		// 正常模式的帧率控制指令
		LCD_WriteData_8bit(0x0F);   	// 设置屏幕控制器的刷新帧率为60帧    

		LCD_WriteCommand(0xD0);			// 电源控制指令
		LCD_WriteData_8bit(0xA4);     // 无效数据，固定写入0xA4
		LCD_WriteData_8bit(0xA1);     // AVDD = 6.8V ，AVDD = -4.8V ，VDS = 2.3V

		LCD_WriteCommand(0xE0);       // 正极电压伽马值设定
		LCD_WriteData_8bit(0xD0);
		LCD_WriteData_8bit(0x04);
		LCD_WriteData_8bit(0x0D);
		LCD_WriteData_8bit(0x11);
		LCD_WriteData_8bit(0x13);
		LCD_WriteData_8bit(0x2B);
		LCD_WriteData_8bit(0x3F);
		LCD_WriteData_8bit(0x54);
		LCD_WriteData_8bit(0x4C);
		LCD_WriteData_8bit(0x18);
		LCD_WriteData_8bit(0x0D);
		LCD_WriteData_8bit(0x0B);
		LCD_WriteData_8bit(0x1F);
		LCD_WriteData_8bit(0x23);

		LCD_WriteCommand(0xE1);      // 负极电压伽马值设定
		LCD_WriteData_8bit(0xD0);
		LCD_WriteData_8bit(0x04);
		LCD_WriteData_8bit(0x0C);
		LCD_WriteData_8bit(0x11);
		LCD_WriteData_8bit(0x13);
		LCD_WriteData_8bit(0x2C);
		LCD_WriteData_8bit(0x3F);
		LCD_WriteData_8bit(0x44);
		LCD_WriteData_8bit(0x51);
		LCD_WriteData_8bit(0x2F);
		LCD_WriteData_8bit(0x1F);
		LCD_WriteData_8bit(0x1F);
		LCD_WriteData_8bit(0x20);
		LCD_WriteData_8bit(0x23);			
	}	
	
	LCD_WriteCommand(0x21);       // 打开反显，因为面板是常黑型，操作需要反过来

 // 退出休眠指令，LCD控制器在刚上电、复位时，会自动进入休眠模式 ，因此操作屏幕之前，需要退出休眠  
	LCD_WriteCommand(0x11);       // 退出休眠 指令
   osDelay(120);               // 需要等待120ms，让电源电压和时钟电路稳定下来

 // 打开显示指令，LCD控制器在刚上电、复位时，会自动关闭显示 
	LCD_WriteCommand(0x29);       // 打开显示   	

	
   switch (lcd_panle)
   {
      case panle_096:   LCD_Width = 80;   LCD_Height = 160;LCD_SetDirection(Direction_H_Flip); break;
      case panle_114:   LCD_Width = 135;  LCD_Height = 240;LCD_SetDirection(Direction_H_Flip); break;
      case panle_130:   LCD_Width = 240;  LCD_Height = 240;LCD_SetDirection(Direction_V); break;
      case panle_169:   LCD_Width = 240;  LCD_Height = 280;LCD_SetDirection(Direction_V); break;    
      case panle_200:   LCD_Width = 240;  LCD_Height = 320;LCD_SetDirection(Direction_V);break;   		
      default:break;  
   }

	
	LCD_SetBackColor(LCD_BLACK);           // 设置背景色
 	LCD_SetColor(LCD_WHITE);               // 设置画笔色  
	LCD_Clear();                           // 清屏

   LCD_SetAsciiFont(&ASCII_Font24);       // 设置默认字体
   LCD_ShowNumMode(Fill_Zero);	      	// 设置变量显示模式，多余位填充空格还是填充0

// 全部设置完毕之后，打开背光	
	if( lcd_panle == panle_096 )
	{
		LCD_Backlight_ON;
	}
	else if( lcd_panle == panle_114 )
	{
		LCD_Backlight_ON;		
	}
	else
	{
		LCD_Backlight_OFF;  // 引脚输出高电平点亮背光	
	}
	
}

void LCD_SetDirection(uint8_t direction)
{
	LCD.Direction = direction;    // 写入全局LCD参数

   if( direction == Direction_H )   // 横屏显示
   {     		         
      LCD.Width      = LCD_Height;		 // 重新赋值长、宽
      LCD.Height     = LCD_Width;		
      LCD_WriteCommand(0x36);	

      switch (lcd_panle)   // 设置控制器坐标偏移量
      {
         case panle_096:  LCD_WriteData_8bit(0xA8);LCD.X_Offset = 1;    LCD.Y_Offset  = 26;   break;
         case panle_114:  LCD_WriteData_8bit(0x70);LCD.X_Offset = 40;   LCD.Y_Offset  = 53;   break;
         case panle_130:  LCD_WriteData_8bit(0x70);LCD.X_Offset = 0;    LCD.Y_Offset  = 0;   break;
         case panle_169:  LCD_WriteData_8bit(0x70);LCD.X_Offset = 20;   LCD.Y_Offset  = 0;   break;
         case panle_200:  LCD_WriteData_8bit(0x70);LCD.X_Offset = 0;   	LCD.Y_Offset  = 0;   break;			
         default:break;  
      }
   }
   else if( direction == Direction_V )
   {
      LCD.Width      = LCD_Width;		// 重新赋值长、宽
      LCD.Height     = LCD_Height;		
      LCD_WriteCommand(0x36);    		// 显存访问控制 指令，用于设置访问显存的方式

      switch (lcd_panle)   // 设置控制器坐标偏移量
      {
         case panle_096:  LCD_WriteData_8bit(0xC8);LCD.X_Offset = 26;    LCD.Y_Offset  = 1;   break;
         case panle_114:  LCD_WriteData_8bit(0x00);LCD.X_Offset = 52;   LCD.Y_Offset  = 40;   break;
         case panle_130:  LCD_WriteData_8bit(0x00);LCD.X_Offset = 0;    LCD.Y_Offset  = 0;   break;
         case panle_169:  LCD_WriteData_8bit(0x00);LCD.X_Offset = 0;   LCD.Y_Offset  = 20;   break;
         case panle_200:  LCD_WriteData_8bit(0x00);LCD.X_Offset = 0;   	LCD.Y_Offset  = 0;   break;				
         default:break;  
      }
   }
   else if( direction == Direction_H_Flip )
   {
      LCD.Width      = LCD_Height;		// 重新赋值长、宽
      LCD.Height     = LCD_Width;			
      LCD_WriteCommand(0x36);    		// 显存访问控制 指令，用于设置访问显存的方式

      switch (lcd_panle)   // 设置控制器坐标偏移量
      {
         case panle_096:  LCD_WriteData_8bit(0x78);LCD.X_Offset = 1;    LCD.Y_Offset  = 26;   break;
         case panle_114:  LCD_WriteData_8bit(0xa0);LCD.X_Offset = 40;   LCD.Y_Offset  = 52;   break;
         case panle_130:  LCD_WriteData_8bit(0xa0);LCD.X_Offset = 80;    LCD.Y_Offset  = 0;   break;
         case panle_169:  LCD_WriteData_8bit(0xa0);LCD.X_Offset = 20;   LCD.Y_Offset  = 0;   break;
         case panle_200:  LCD_WriteData_8bit(0xa0);LCD.X_Offset = 0;   	LCD.Y_Offset  = 0;   break;				
         default:break;  
      }
   }
   else if( direction == Direction_V_Flip )
   {
      LCD.Width      = LCD_Width;		// 重新赋值长、宽
      LCD.Height     = LCD_Height;	
      LCD_WriteCommand(0x36);    		// 显存访问控制 指令，用于设置访问显存的方式

      switch (lcd_panle)   // 设置控制器坐标偏移量
      {
         case panle_096:  LCD_WriteData_8bit(0x08);LCD.X_Offset = 26;    LCD.Y_Offset  = 1;   break;
         case panle_114:  LCD_WriteData_8bit(0xc0);LCD.X_Offset = 53;   LCD.Y_Offset  = 40;   break;
         case panle_130:  LCD_WriteData_8bit(0xc0);LCD.X_Offset = 0;    LCD.Y_Offset  = 80;   break;
         case panle_169:  LCD_WriteData_8bit(0xc0);LCD.X_Offset = 0;   LCD.Y_Offset  = 20;   break;
         case panle_200:  LCD_WriteData_8bit(0xc0);LCD.X_Offset = 0;   	LCD.Y_Offset  = 0;   break;					
         default:break;  
      }      						
   }   
}

void LCD_Clear(void)
{
   LCD_SetAddress(0,0,LCD.Width-1,LCD.Height-1);	// 设置坐标
	
	LCD_DC_Data;     // 数据指令选择 引脚输出高电平，代表本次传输 数据	

// 修改为16位数据宽度，写入数据更加效率，不需要拆分	
   LCD_SPI.Init.DataSize 	= SPI_DATASIZE_16BIT;   //	16位数据宽度
   HAL_SPI_Init(&LCD_SPI);		
	
   LCD_SPI_Transmit(&LCD_SPI, LCD.BackColor, LCD.Width * LCD.Height) ;   // 启动传输

// 改回8位数据宽度，因为指令和部分数据都是按照8位传输的
	LCD_SPI.Init.DataSize 	= SPI_DATASIZE_8BIT;    //	8位数据宽度
   HAL_SPI_Init(&LCD_SPI);
}

void LCD_ClearRect(uint16_t x, uint16_t y, uint16_t width, uint16_t height)
{
   LCD_SetAddress( x, y, x+width-1, y+height-1);	// 设置坐标	
	
	LCD_DC_Data;     // 数据指令选择 引脚输出高电平，代表本次传输 数据	

// 修改为16位数据宽度，写入数据更加效率，不需要拆分	
   LCD_SPI.Init.DataSize 	= SPI_DATASIZE_16BIT;   //	16位数据宽度
   HAL_SPI_Init(&LCD_SPI);		
	
   LCD_SPI_Transmit(&LCD_SPI, LCD.BackColor, width*height) ;  // 启动传输

// 改回8位数据宽度，因为指令和部分数据都是按照8位传输的
	LCD_SPI.Init.DataSize 	= SPI_DATASIZE_8BIT;    //	8位数据宽度
   HAL_SPI_Init(&LCD_SPI);

}

void LCD_FillRect(uint16_t x, uint16_t y, uint16_t width, uint16_t height)
{
   LCD_SetAddress( x, y, x+width-1, y+height-1);	// 设置坐标	
	
	LCD_DC_Data;     // 数据指令选择 引脚输出高电平，代表本次传输 数据	

// 修改为16位数据宽度，写入数据更加效率，不需要拆分	
   LCD_SPI.Init.DataSize 	= SPI_DATASIZE_16BIT;   //	16位数据宽度
   HAL_SPI_Init(&LCD_SPI);		
	
   LCD_SPI_Transmit(&LCD_SPI, LCD.Color, width*height) ;

// 改回8位数据宽度，因为指令和部分数据都是按照8位传输的
	LCD_SPI.Init.DataSize 	= SPI_DATASIZE_8BIT;    //	8位数据宽度
   HAL_SPI_Init(&LCD_SPI);
}
